# eps-gecode

./: .gitignore~  AUTHORS  CMakeLists.txt  COPYING  INSTALL  LICENSE  Makefile  Makefile.local  README  format_sources.sh  install_gecode.sh  make-wrapper  test_flatzinc.sh
include/jemalloc/: jemalloc_defs.h
instances/: golomb_03.fzn  golomb_04.fzn  golomb_05.fzn  golomb_06.fzn  golomb_07.fzn  golomb_08.fzn  golomb_09.fzn  golomb_10.fzn  golomb_11.fzn  golomb_12.fzn
instances/hakan_training/sat/: partitions_little.fzn
lib/windows/lib32/: libtcmalloc_minimal.lib  libtcmalloc_minimal_2.0.lib  libtcmalloc_static_2.0.lib
makefiles/: Makefile.unix  Makefile.win
src/: CMakeLists.txt  eps_bab.cpp  eps_bab.hpp  eps_dfs.cpp  eps_dfs.hpp  flatzinc.cpp  flatzinc.h  lock.cpp  lock.h  main.cpp  models.h  pthreads.cpp  search.h  stl_util.h  test_fz.cpp  thread.cpp  threads_windows.cpp
src/models/: allinterval.h  bacp.h  binpacking.h  enumeration.h  golombruler.h  graphcolor.h  latinsquares.h  magicsquare.h  nqueens.h  partition.h  quasigroupscompletion.h  sportsleague.h  steelmill.h
